--- a/homework2/code__check(1).html
+++ b/homework2/code__check(1).html
@@ -29,7 +29,7 @@
         /*
         1. d - undefined;
         2. b = 1;
-        3. d = 1, так как происходит постпрефиксный инкремент(сначала записывается значение в переменную d, потом прибавляется единица к b), а к b прибавится 1; 
+        3. d = 1, так как происходит постфиксный инкремент(сначала записывается значение в переменную d, потом прибавляется единица к b), а к b прибавится 1; 
         */
         d = b++;
         alert(d); //1
@@ -46,7 +46,7 @@
 
         /*
         1. если посмотреть область видимости переменной, то b = 2; 
-        2. 2 + 2 = 4; так как постпрефиксный инкремент после b, поэтому 2, а не 3;
+        2. 2 + 2 = 4; так как постфиксный инкремент после b, поэтому 2, а не 3;
         3. d = 4;
         */
         d = 2 + b++;
